--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Bot</title>
-    <meta name="description" content="idk something about ur bot goes here">
-    <meta name="theme-color" content="#f54254">
-    <link rel="icon" type="image/png" sizes="300x250" href="assets/img/superthumb.png">
+    <title>Fukami Bot</title>
+    <meta name="description" content="The best bot ever made on Discord !">
+    <meta name="theme-color" content="#843ecf">
+    <link rel="icon" type="image/png" sizes="300x250" href="https://cdn.discordapp.com/attachments/937436848429621329/1081236965497770074/2b3957f4767cd62d61f98eafd0b16200bbd3e6a8.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -19,7 +19,7 @@
 <body style="background-color: var(--background);">
     <div id="top" style="height: 12px;">
         <nav class="navbar navbar-light navbar-expand fixed-top" style="color: var(--main-color);border-top-width: 6px;border-top-style: solid;background: var(--background);">
-            <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color);font-family: 'Alfa Slab One', cursive;">Bot Name</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color);font-family: 'Alfa Slab One', cursive;">Fuakmi</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav">
@@ -32,9 +32,9 @@
     </nav>
     </div>
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="https://cdn.discordapp.com/attachments/775384036285218869/776188652463456256/nUXFft6.gif" width="150" height="150" style="margin-top: 30px;">
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Bot</h1>
-        <p style="color: var(--secondary-text-color);">a bot that does random things!</p>
-        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/invite/" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
+        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Fukami</h1>
+        <p style="color: var(--secondary-text-color);">The most configurable bot ever !</p>
+        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/api/oauth2/authorize?client_id=1081238882835763342&permissions=8&scope=bot" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
 	
 	<a class="btn btn-primary smoothScroll shadow-none" role="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;"
         href="#feature">Features</a></div></div>
@@ -48,20 +48,20 @@
             <div class="row justify-content-center features">
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div id="features" class="box" style="/*border-radius: 34px;*/"><i class="fa fa-bolt icon" style="color: var(--main-color);"></i>
-                        <h3 class="name">Fast</h3>
-                        <p class="description" style="color: var(--secondary-text-color);">Explain how fast your bot is here! Lightning fast!<br></p>
+                        <h3 class="name">Moderation</h3>
+                        <p class="description" style="color: var(--secondary-text-color);">Advanced commands to moderate your server<br></p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div id="features" class="box"><i class="fa fa-lock icon" style="color: var(--main-color);"></i>
-                        <h3 class="name">Secure</h3>
-                        <p class="description" style="color: var(--secondary-text-color);">Explain how secure your bot is and why people should use it.<br></p>
+                        <h3 class="name">Antiraid</h3>
+                        <p class="description" style="color: var(--secondary-text-color);">Secure your server with anti raid system<br></p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div id="features" class="box"><i class="fa fa-smile-o icon" style="color: var(--main-color);"></i>
-                        <h3 class="name">Happy Users</h3>
-                        <p class="description" style="color: var(--secondary-text-color);">Explain how happy everyone who uses your bot is!<br></p>
+                        <h3 class="name">Economy & Level</h3>
+                        <p class="description" style="color: var(--secondary-text-color);">Have fun with economy and leveling system<br></p>
                     </div>
                 </div>
             </div>
@@ -89,24 +89,24 @@
          
     <! --- If you want more just copy the following code from here -- >
           <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Standard Commands</span><span class="icon" aria-hidden="true"></span></button>
+      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Part 1</span><span class="icon" aria-hidden="true"></span></button>
       <div class="accordion-content">
-        <p>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> fuck <br> hi <br> lol</p>
+        <p>+help - See all bot commands <br> +avatar - Shows a bot's avatar</p>
       </div>
     </div>
     <! --- to here :D -- >
     <! --- If you want more just copy the following code from here -- >
           <div class="accordion-item">
-      <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Standard Commands</span><span class="icon" aria-hidden="true"></span></button>
+      <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Part 2</span><span class="icon" aria-hidden="true"></span></button>
       <div class="accordion-content">
-        <p>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> fuck <br> hi <br> lol</p>
+        <p>+ban - Bans a user <br> +unban - Unbans a user</p>
       </div>
     </div>
     <! --- to here :D -- >
           <div class="accordion-item">
-      <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">Fun Commands</span><span class="icon" aria-hidden="true"></span></button>
+      <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">Part 3</span><span class="icon" aria-hidden="true"></span></button>
       <div class="accordion-content">
-        <p>!hug - hugs a user <br> !ban - bans a user
+        <p>+antilink - Configures antilink system
         </p>
       </div>
     </div>
@@ -131,9 +131,9 @@
             <div class="row">
                 <div class="col item social"><a class="smoothScroll" href="#top"><i class="icon ion-android-arrow-up"></i></a></div>
             </div>
-            <p class="copyright" style="color: var(--text-color);">Bot © 2021</p>
+            <p class="copyright" style="color: var(--text-color);">Bot © 2023</p>
             <p class="copyright" style="color: var(--text-color);padding: 0px;">
-                <!--Consider leaving this to give credit to me for making this, I worked hard on it and it makes me feel good :D-->Theme by&nbsp;<a href="https://itshoozi.com" style="color: var(--main-color);">itsHoozi</a></p>
+                <!--Consider leaving this to give credit to me for making this, I worked hard on it and it makes me feel good :D-->Made by&nbsp;<a href="https://discord.gg/VW8fjXjbWF" style="color: var(--main-color);">Owem</a></p>
         </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
