--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     </nav>
     </div>
-    <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="https://cdn.discordapp.com/attachments/775384036285218869/776188652463456256/nUXFft6.gif" width="150" height="150" style="margin-top: 30px;">
+    <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="https://cdn.discordapp.com/attachments/937436848429621329/1081242718438694932/85131.webp" width="150" height="150" style="margin-top: 30px;">
         <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Fukami</h1>
         <p style="color: var(--secondary-text-color);">The most configurable bot ever !</p>
         <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/api/oauth2/authorize?client_id=1081238882835763342&permissions=8&scope=bot" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
