--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="accordion-item">
       <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Part 1</span><span class="icon" aria-hidden="true"></span></button>
       <div class="accordion-content">
-        <p>+help - See all bot commands <br> +avatar - Shows a bot's avatar</p>
+        <p>+help - See all bot commands <br> +avatar - Shows a user's avatar</p>
       </div>
     </div>
     <! --- to here :D -- >
